# LibAPR

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL_INSTRUCTIONS.md  LICENSE  README.md  cmake-build-linux.sh  cmake-build-osx.sh  cmake-build-windows.sh  cmake-build.sh  cmake-build_windows.sh  install_tests.sh  libapr.i  pom.xml  vcpkg.json
benchmarks/: APRBenchHelper.hpp  AnalysisData.hpp  BenchAPRHelper.hpp  BenchCudaAccessInit.cpp  BenchFilter.cpp  BenchFilterCuda.cpp  BenchIO.cpp  BenchIteration.cpp  BenchIterationCuda.cpp  BenchPartData.cpp  BenchPipeline.cpp  BenchmarkTest.cpp  CMakeLists.txt  DataManager.hpp  FilterBenchmarks.hpp  Generate_APR_Time.cpp  Generate_APR_Time.hpp  benchmark_aniso.cpp  benchmark_aniso.hpp  benchmark_fix_ratio.cpp  benchmark_fix_ratio.h  benchmark_increase_domain.cpp  benchmark_increase_domain.hpp  benchmark_increase_info.cpp  benchmark_increase_info.hpp  benchmark_increase_rel_error.cpp  benchmark_increase_rel_error.hpp  benchmark_increase_zoom.cpp  benchmark_increase_zoom.hpp  benchmark_local_scale.cpp  benchmark_local_scale.hpp  benchmark_real_data.cpp  benchmark_real_data.hpp  generate_anisotropic_single.cpp  generate_anisotropic_single.hpp  generate_single_image.cpp  generate_single_image.hpp  increase_info_and_domain.cpp  increase_info_and_domain.hpp  test_benchmark.cpp  (+1 more)
benchmarks/Matlab/: demo_script.m  format_figure.m  format_figure_scatter.m  get_a_d.m  get_avg.m  get_unique.m  load_analysis_data.m  plot_avg.m  plot_ind.m  plot_interp_surf.m  plot_surf_unique.m  plot_unique.m  plot_unique_yy.m  ploty_mult.m  read_pc_struct.m  set_analysis_root.m  shadedErrorBaryy.m
benchmarks/Matlab/Example/: example_benchmark.m
benchmarks/analysis/: AnalysisData.hpp  TimeModel.hpp  apr_analysis.h  benchmark_helpers.hpp  numerics_benchmarks.hpp  syn_templates.h
benchmarks/development/: Example_alt_datastructures.cpp  Example_alt_datastructures.h  Example_benchmark.cpp  Example_benchmark.h  Example_compress_apr.cpp  Example_enhance_apr.cpp  Example_enhance_apr.hpp  Example_newstructures.cpp  Example_newstructures.h  analyze_apr.cpp  compress_apr.cpp  compress_apr.h  filter_apr.cpp  filter_apr.h  get_apr_interp_alt.cpp  resample_img.cpp  resample_img.h  segment_rc_apr.cpp  segment_rc_apr.h  segmentation_apr.cpp  segmentation_apr.h
benchmarks/development/Time/: APR_Time.cpp  APR_Time.hpp
benchmarks/development/Tree/: APRIteratorOld.hpp  IteratorBase.hpp  LevelIterator.hpp  PartCellData.hpp  PartCellNeigh.hpp  PartCellParent.hpp  PartCellStructure.hpp  ParticleData.hpp  ParticleDataNew.hpp  Tree.hpp
benchmarks/development/final_benchmarks/: APRBenchmark.hpp  BenchHelper.hpp  Benchmark_real_datasets.cpp  Benchmark_real_datasets.hpp  CR_benchmarks.cpp  Example_benchmark.cpp  Example_benchmark.h  OldAPRConverter.hpp
benchmarks/files/: cr_1.apr  cr_10.apr  cr_1000.apr  cr_124.apr  cr_15.apr  cr_20.apr  cr_3.apr  cr_30.apr  cr_5.apr  cr_54.apr
examples/: CMakeLists.txt  ExampleHelpers.hpp  Example_apr_deconvolution.cpp  Example_apr_deconvolution.hpp  Example_apr_filter.cpp  Example_apr_filter.hpp  Example_apr_iterate.cpp  Example_apr_iterate.h  Example_apr_neighbour_access.cpp  Example_apr_neighbour_access.hpp  Example_apr_tree.cpp  Example_apr_tree.hpp  Example_compress_apr.cpp  Example_compress_apr.h  Example_compute_gradient.cpp  Example_compute_gradient.hpp  Example_denoise.cpp  Example_denoise.hpp  Example_get_apr.cpp  Example_get_apr.h  Example_get_apr_by_block.cpp  Example_get_apr_by_block.hpp  Example_lazy_access.cpp  Example_lazy_access.hpp  Example_produce_paraview_file.cpp  Example_produce_paraview_file.hpp  Example_random_access.cpp  Example_random_access.hpp  Example_ray_cast.cpp  Example_ray_cast.h  Example_reconstruct_image.cpp  Example_reconstruct_patch.cpp
examples/matlabHelpers/: demo_read.m  load_apr_full.m
examples/python_examples/: Example_get_apr_from_array.py  Example_get_apr_from_file.py  Example_reconstruct_image.py  TIFFreadwrite.py
gpuhack/: CMakeLists.txt  CPU_full_storage.cpp  Cpu_dense_identity_check.cpp  Cpu_dense_mesh.cpp  Cpu_dense_neighbour.cpp  Cpu_dense_simplified_access.cpp  Cpu_dense_tree.cpp  Cpu_example.cpp  Cpu_neighbour_access_Tree.cpp  Cpu_neighbour_access_Tree_stencil.cpp  GPU_full_storage.cu  GPU_insert_dense.cu
test/: APRParametersTest.cpp  APRTest.cpp  APRTestCuda.cpp  BenchmarkTest.cpp  CMakeLists.txt  ComputeGradientCudaTest.cpp  ComputeGradientTest.cpp  DenoiseTest.cpp  ExamplesTest.cpp  FilterTestHelpers.hpp  FullPipelineCudaTest.cpp  GPUAPR.cu  GPUAPR.hpp  GPUAPRTest.cpp  LinearAccessCudaTest.cpp  LinearAccessTest.cpp  LocalIntensityScaleCudaTest.cpp  LocalIntensityScaleTest.cpp  MeshDataTest.cpp  PullingSchemeCudaTest.cpp  PullingSchemeTest.cpp  TestTools.hpp  TiffTest.cpp  alg_cells_test.cpp  alg_cells_test.h  bspline_test.cpp  k_test.cpp  k_test.h  pythonTest.py  tests.cpp  tests.h  utils.cpp  utils.h  variance_test.cpp
test/Examples/: Example_alt_datastructures.cpp  Example_alt_datastructures.h  Example_apr_iterate.cpp  Example_apr_neighbour_access.cpp  Example_apr_neighbour_access.hpp  Example_compress_apr.cpp  Example_compress_apr.h  Example_compute_gradient.cpp  Example_compute_gradient.hpp  Example_enhance_apr.cpp  Example_enhance_apr.hpp  Example_get_apr.cpp  Example_get_apr.h  Example_neigh.cpp  Example_neigh.hpp  Example_produce_paraview_file.cpp  Example_produce_paraview_file.hpp  Example_random_access.cpp  Example_random_access.hpp  Example_ray_cast.cpp  Example_ray_cast.h  Example_recon_img.cpp  Example_recon_img.h  Example_reconstruct_image.cpp  analyze_apr.cpp  analyze_apr.h  compress_apr.cpp  compress_apr.h  compute_cells.cpp  compute_cells.h  compute_parts.cpp  filter_apr.cpp  filter_apr.h  get_apr.cpp  get_apr.h  get_apr_interp_alt.cpp  ray_cast.cpp  ray_cast.h  resample_img.cpp  resample_img.h  (+7 more)
test/test_tree/: create_part_cell_structure.cpp  create_part_cell_structure.hpp  face_neighbours_test.cpp  level_iterator_test.cpp  neighbours_test.cpp  raytrace_test.cpp  raytrace_test.h  sparse_rep_test.cpp  tree_fixtures.cpp  tree_fixtures.hpp
(+304 files in other folders)
