add_executable(Example_get_apr Example_get_apr.cpp )
add_executable(Example_apr_iterate Example_apr_iterate.cpp)
add_executable(Example_reconstruct_image Example_reconstruct_image.cpp)
add_executable(Example_compress Example_compress_apr.cpp)
add_executable(Example_produce_paraview_file Example_produce_paraview_file.cpp)
add_executable(Example_apr_neighbour_access Example_apr_neighbour_access.cpp)
add_executable(Example_compute_gradient Example_compute_gradient.cpp)
add_executable(Example_random_access Example_random_access.cpp)
add_executable(Example_ray_cast Example_ray_cast.cpp)

target_link_libraries(Example_get_apr libapr_dynamic)
target_link_libraries(Example_apr_iterate libapr_dynamic)
target_link_libraries(Example_reconstruct_image libapr_dynamic)
target_link_libraries(Example_apr_neighbour_access libapr_dynamic)
target_link_libraries(Example_produce_paraview_file libapr_dynamic)
target_link_libraries(Example_compress libapr_dynamic)
target_link_libraries(Example_compute_gradient libapr_dynamic)
target_link_libraries(Example_random_access libapr_dynamic)
target_link_libraries(Example_ray_cast libapr_dynamic)
