macro(buildTarget TARGET)
    add_executable(${TARGET} ${TARGET}.cpp)
    target_link_libraries(${TARGET} ${HDF5_LIBRARIES} ${TIFF_LIBRARIES} ${APR_BUILD_LIBRARY})
endmacro(buildTarget)

buildTarget(Example_get_apr)
buildTarget(Example_apr_iterate)
buildTarget(Example_reconstruct_image)
buildTarget(Example_compress_apr)
buildTarget(Example_produce_paraview_file)
buildTarget(Example_apr_neighbour_access)
buildTarget(Example_compute_gradient)
buildTarget(Example_random_access)
buildTarget(Example_ray_cast)
buildTarget(Example_reconstruct_patch)
buildTarget(Example_apr_tree)

